--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ _ReSharper.CSharp/
 /Unity/Assets/StreamingAssets/
 /netcoreapp2.0
 /Unity/Assets/StreamingAssets.meta
+.DS_Store
+Server/.DS_Store
