1.UI类可以Get子Gameobject，作为自己的孩子UI 2.修复Hotfix ILRuntime宏没去掉的问题

--- a/Unity/Hotfix/Unity.Hotfix.csproj
+++ b/Unity/Hotfix/Unity.Hotfix.csproj
@@ -29,7 +29,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\Temp\UnityVS_bin\Release\</OutputPath>
-    <DefineConstants>TRACE;ILRuntime</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
