--- a/Unity/Unity.csproj
+++ b/Unity/Unity.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Assets\Scripts\Base\Network\KNet\Kcp.cs" />
     <Compile Include="Assets\Scripts\Base\Network\KNet\KChannel.cs" />
     <Compile Include="Assets\Scripts\Base\Network\KNet\KService.cs" />
+    <Compile Include="Assets\Scripts\Base\Network\NetworkHelper.cs" />
     <Compile Include="Assets\Scripts\Base\Network\TNet\PacketParser.cs" />
     <Compile Include="Assets\Scripts\Base\Network\TNet\TBuffer.cs" />
     <Compile Include="Assets\Scripts\Base\Network\TNet\TChannel.cs" />
