1.去掉ComopnentDB跟EntityDB类，BsonKnowType标记放到ComponentAttribute跟EntityAttribute类上面 2.增加ISerializeToEntity接口，Component子类继承了该接口就会跟随Entity序列化，否则Entity序列化不会序列化这个Component 3.以上两个改动主要考虑到需要提供一种机制，Component不随着Entity序列化，但是Component本身又要进行序列化，比如背包，背包需要单独保存到一个数据库表中，所以不能跟随Player对象序列化，但是背包组件本身需要序列化保存到数据库中

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -34,6 +34,7 @@
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\IAwake.cs" Link="Base\Object\IAwake.cs" />
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\ILateUpdate.cs" Link="Base\Object\ILateUpdate.cs" />
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\ILoad.cs" Link="Base\Object\ILoad.cs" />
+    <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\ISerializeToEntity.cs" Link="Base\Object\ISerializeToEntity.cs" />
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\IStart.cs" Link="Base\Object\IStart.cs" />
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\IUpdate.cs" Link="Base\Object\IUpdate.cs" />
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\Object.cs" Link="Base\Object\Object.cs" />
