彻底解决了vs中不能添加cs文件的bug

--- a/Server/App/Properties/launchSettings.json
+++ b/Server/App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Server.App": {
       "commandName": "Project",
-      "workingDirectory": "../../netcoreapp2.0"
+      "workingDirectory": "../../Bin"
     }
   }
 }
