--- a/Server/App/Properties/launchSettings.json
+++ b/Server/App/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "Server.App": {
       "commandName": "Project",
+      "commandLineArgs": "--appId=1 --appType=AllServer --config=../Config/StartConfig/LocalAllServer.txt",
       "workingDirectory": "../../Bin"
     }
   }
